--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,12 @@
+== 1.1.0 2015-05-11
+
+  * Adding lub.Param class to save/restore script parameters and map controllers.
+  * Using lut.Builder to generate build files.
+  * Improved lub.Template error reporting and parsing with embeded ']=]' strings.
+  * Fixed lub.shellQuote to escape dollar sign.
+  * Lua 5.3 compatibility.
+  * Fixed load path in tests to use local version.
+
 == 1.0.7 2014-06-24
 
   * Using io.popen and uname to guess platform type.
